--- a/index.ipynb
+++ b/index.ipynb
@@ -149,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating']>alternative['rating']:\n",
     "        return True\n",
-    "    return Fas"
+    "    return False"
    ]
   },
   {
