--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,8 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants :\n",
     "        if restaurant[is_closed] :\n",
-    "            re"
+    "           None\n",
+    "        "
    ]
   },
   {
