--- a/index.ipynb
+++ b/index.ipynb
@@ -289,8 +289,8 @@
     "    number_open = 0\n",
     "    for restaurant in restaurants :\n",
     "        if restaurant['is_closed'] :\n",
-    "            number_open += 0\n",
-    "        number_open +=1"
+    "            number_open.append() += 0\n",
+    "        number_open.append(restaurant)"
    ]
   },
   {
