--- a/index.ipynb
+++ b/index.ipynb
@@ -281,15 +281,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-28-502b2176df70>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-502b2176df70>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    number_open.append(restaurant)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    number_open = 0\n",
     "    for restaurant in restaurants :\n",
     "        if restaurant['is_closed'] :\n",
-    "            number_open.append() += 0\n",
+    "            \n",
     "        number_open.append(restaurant)"
    ]
   },
